# composer

./: .gitignore  Cargo.toml  README.md
Composer/: Cargo.toml
Composer/src/: composer.rs  main.rs  parse_module.rs  starlark_modules.rs  task.rs  test_module.rs  tests.rs  workflow.rs
boilerplate/: Cargo.toml
boilerplate/src/: lib.rs  types.rs
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
cli/src/commands/: build.rs  create.rs  mod.rs  validate.rs
cli/src/errors/: io.rs  mod.rs
cli/src/types/: context.rs  echo.rs  mod.rs  parser.rs
composer/: Cargo.toml  README.md
composer-primitives/: Cargo.toml
composer-primitives/src/: constant.rs  lib.rs
composer-primitives/src/types/: mod.rs  output_directory.rs  source_files.rs
composer/src/: composer.rs  input.rs  lib.rs  main.rs  parse_module.rs  starlark_modules.rs  task.rs  tests.rs  workflow.rs
composer/src/common/: composer.rs  mod.rs  parse_module.rs  starlark_modules.rs
composer/src/common/types/: composer.rs  input.rs  mod.rs  parse_module.rs  rust_types.rs  task.rs
composer/src/tests/: mod.rs
composer/src/types/: input.rs  mod.rs  rust_types.rs  task.rs  workflow.rs
composer_primitives/src/: lib.rs
composer_primitives/src/errors/: io.rs
composer_primitives/src/types/: build_directory.rs  source_files.rs
config/: MacMoc.star  car_market_place.echo  car_market_place.star  custom-types-re-structured.star  custom_types(re-structured).star  custom_types.star  default-value-testing-car_market_place.star  example.star  map_concat_test(emp_salary).star  mock_car_market_place.echo  mock_emp_salary_map_conact.echo  multiple.star  new_config.star  payout_notification.star  test_car_market_place.echo  test_emp_salary_map.echo
echo-cli/: Cargo.toml  README.md
echo-cli/src/: cli.rs  lib.rs  main.rs
echo-cli/src/command/: build.rs  mod.rs
echo-cli/src/error/: error.rs  io.rs  mod.rs
echo-cli/src/tests/: mod.rs
echo-cli/src/types/: build_directory.rs  mod.rs
echo-library/: Cargo.toml  Readme.md
echo-library/src/boilerplate/: Cargo.toml
echo-library/src/boilerplate/src/: common.rs  lib.rs
echo-library/src/common/: composer.rs  parse_module.rs  starlark_modules.rs
echo_library/: Cargo.toml
echo_library/src/: lib.rs
echo_library/src/common/: composer.rs  parse_module.rs  starlark_modules.rs
example/: main.echo
generated_project/: types.rs
generated_project/workflow_1/: types.rs
generated_project/workflow_2/: types.rs
multiple_configs/: config2.star
package/: Cargo.toml  README.md  main.echo  main.star  test.star
package/composer_library/: Cargo.toml
package/composer_library/src/: lib.rs
package/composer_library/src/common/: composer.rs  mod.rs  output_directory.rs  source_files.rs
package/src/: cli.rs  lib.rs  main.rs
package/src/commands/: build.rs  create.rs  mod.rs  validate.rs
package/src/errors/: io.rs
package/src/types/: context.rs  echo.rs  mod.rs  parser.rs  result.rs
temp/boilerplate/src/: types.rs
temp/car_market_place-0.0.1/src/: types.rs
temp/employee_salary-0.0.1/: Cargo.toml
temp/employee_salary-0.0.1/src/: types.rs
workflow_wasm/: car_market_place-0.0.1.wasm
workflows/config_1_workflows/employee_salary/: types.rs
workflows/config_1_workflows/polkadot_payout/: types.rs
workflows/config_2_workflows/employee_salary/: types.rs
workflows/config_2_workflows/polkadot_payout/: types.rs
workflows/config_3_workflows/employee_salary/: types.rs
workflows/config_3_workflows/polkadot_payout/: types.rs
workflows/config_4_workflows/employee_salary/: types.rs
workflows/config_4_workflows/polkadot_payout/: types.rs
workflows/employee_salary/: types.rs
workflows/polkadot_payout/: types.rs
