[package]
name = "echo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
clap_builder = "4.4.9"
composer = { path = "../composer" }
clap-verbosity-flag = "2.1.0"
env_logger = "0.10.1"
log = "*"
indicatif = "0.17.7"
thiserror = "1.0"
anyhow = "1.0.75"
