[package]
name = "echo-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "Apache-2.0"
description = "primitives types for composer"

[dependencies]
anyhow = "1.0.75"
starlark = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.107"
allocative = "0.3.0"
thiserror = "1.0.50"
convert_case = "0.6.0"
itertools = "0.10.5"
walkdir = "2"
composer-primitives = "0.0.1"
rayon = "1.8.1"